# base-python-project

./: .env  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  workspace.code-workspace
.github/workflows/: python.yml
scripts/: load_env.sh  shell.sh
