[project]
requires-python = ">3.8"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
exclude = "^(.venv|build|dist)/.*$"

[tool.ruff]
line-length = 120
